--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,4 +1,5 @@
 .main-menu {
+    margin: auto;
     width: 80%;
 }
 
@@ -13,12 +14,7 @@
 
 figcaption{
     background-color: rgb(255, 255, 255);
-    text-align: justify;
+    text-align: center;
     width: 100%;
     padding: 8px;
-}
-
-span{
-    color: brown;
-    font-weight: bold;
 }
