Update admin page.

--- a/styles/pedidos.css
+++ b/styles/pedidos.css
@@ -9,7 +9,30 @@ form {
     border-radius: 25px;
 }
 
+.form-titulo {
+    height: 100px;
+    background-color: lightsteelblue;
+    margin: auto;
+}
+
+.form-titulo h2{
+    font-weight: 600;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+}
+
 .info-personal {
     margin: auto;
     justify-content: space-between;
+}
+
+.pasteles {
+    font-size: 18px;
+}
+
+.form-btn .btn{
+    font-size: 25px;
 }
